--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ header{
     position: relative;
     z-index: 2;
     cursor: pointer;
+    outline: none;
 }
 .default_btn:after{
     content: "\f178";
@@ -174,7 +175,7 @@ header{
     position: absolute;
     top:50%;
     transform: translateY(-50%);
-    right: -17px;
+    right: -18px;
 }
 
 .slider_inner{
@@ -213,4 +214,97 @@ header{
 }
 .slick-prev{
     left:0;
+}
+
+.about{
+    padding: 50px 0px 30px;
+}
+
+.about_top{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+}
+.about_title-box{
+    max-width: 520px;
+    padding-left: 140px;
+    position: relative;
+}
+.about_title-box:before{
+    content:"";
+    position: absolute;
+    width: 100px;
+    height: 2px;
+    background-color: #22b9ff;
+    left: 0;
+    top:13px;
+}
+
+.about_title{
+    font-size: 24px;
+    font-weight: 500;
+    font-family: 'Roboto' sans-serif;
+    line-height: 24px;
+    color:#303030;
+    margin-bottom: 10px;
+}
+.about_text{
+    letter-spacing: 0.1px;
+}
+.about_btn a{
+    letter-spacing: 0.4px;
+    color:#5e5e5e;
+    line-height: 24px;
+    padding: 5px 38px;
+    border:3px solid #22b9ff;
+}
+.about_items{
+    display: flex;
+    justify-content: space-between;
+}
+
+.item{
+    max-width: 360px;
+    text-align: center;
+    padding: 30px 0px 80px;
+    position: relative;
+    min-height: 370px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 7px 24.3px 2.7px rgba(91, 89, 89, 0.34);
+}
+
+.about_item_img{
+    max-width: 60px;
+    max-height: 60px;
+    margin-bottom: 10px;
+}
+
+.about_item_title{
+    font-family: 'Roboto' sans-serif;
+    color:#5e5e5e;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+.about_item_text{
+    letter-spacing: 0.2px;
+    padding: 0px 30px 30px;
+}
+.about_item_btn{
+    position: absolute;
+    bottom: 40px;
+    left:0;
+    right: 0;
+}
+
+.about_item_btn .default_btn{
+    color:#5e5e5e;
+}
+
+.about_item_link{
+    font-family: 'Roboto' sans-serif;
+    color:#323232;
+    text-decoration: underline;
+    margin-right: 50px;
 }
