--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
                         </div>
                         <nav class="menu">
                             <ul>
-                                <li><a href="#">Главная</a></li>
-                                <li><a href="#">О нас</a></li>
+                                <li><a href="/">Главная</a></li>
+                                <li><a href="/Cars/List">О нас</a></li>
                                 <li><a href="#">Автомобили</a></li>
                                 <li><a href="#">Контакты</a></li>
                             </ul>
