Changed language,Little fixes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,12 +24,11 @@
             <div class="header_top">
                 <div class="container">
                     <div class="header_contacts">
-                        <a class="header_phone" href="tel:79066625633"> + 7(953) 633 12 47 </a>
-                        <a class="header_email" href="#">assetocorsa_car_deal@mail.ru</a>
-                        <a class="header_instagram" href="#">assetocorsa_car_deal</a>
+                        <a class="header_phone" href="tel:7666534532"> + 7(953) 633 12 47 </a>
+                        <a class="header_email" href="#">wrong_gear@tothe.moon</a>
+                        <a class="header_instagram" href="#">wrong_gear_to_the_moon</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">
-                            Бесплатная
-                            консультация!
+                            Free consultation!
                         </a>
                     </div>
                 </div>
@@ -44,10 +43,10 @@
                         </div>
                         <nav class="menu">
                             <ul>
-                                <li><a href="/">Главная</a></li>
-                                <li><a href="/Cars/List">О нас</a></li>
-                                <li><a href="#">Автомобили</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="/">Main</a></li>
+                                <li><a href="/">About</a></li>
+                                <li><a href="/Cars/List">Cars</a></li>
+                                <li><a href="#">Contacts</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -64,27 +63,26 @@
                 <div class="advantages_inner">
                     <div class="advantages_item">
                         <div class="advantages_title">
-                            Огромный опыт
+                            Huge experience
                         </div>
                         <div class="advantages_text">
-                            Занимаемся продажей авто больше 30 лет
+                            We are trusted by billionaires. We do all the work for them.
                         </div>
                     </div>
                     <div class="advantages_item">
                         <div class="advantages_title">
-                            О нас знают
+                            Everyone know about us
                         </div>
                         <div class="advantages_text">
-                            Огромное количество людей доверяют нам и сотрудничают
+                            Sometimes people come to us just to look at new hypercars around the world.
                         </div>
                     </div>
                     <div class="advantages_item">
                         <div class="advantages_title">
-                            Юридическая чистота
+                            Legal purity
                         </div>
                         <div class="advantages_text">
-                            Все автомобили с пробегом, представленные в наших салонах, проходят комплексную юридическую
-                            проверку.
+                            You definitely have friends who took a car from us
                         </div>
                     </div>
                 </div>
@@ -97,23 +95,16 @@
                     <div class="footer_inner">
                         <div class="footer_info">
                             <div class="footer_title">
-                                AssetoCorsa
+                                WrongGear = ToTheMoon
                             </div>
                             <div class="footer_text">
-                                В автосалонах AssetoCorsa автомобили с пробегом на постоянной основе действуют акции и
-                                специальные финансовые программы,
-                                благодаря которым Вы сможете купить автомобиль б/у в Москве и Московской области по
-                                максимально привлекательной
-                                стоимости. Условия и сроки действия спецпредложений, а также характеристики, комплектации и
-                                цены на авто с пробегом в
-                                наличии просьба уточнять у специалистов отдела продаж по многоканальному телефону или
-                                посредством формы обратной связи.
+                                We are the number one in russia who sells hypercars with a turnover of 3 cars per year
                             </div>
                             <ul class="footer_contacts_list">
-                                <li><a class="footer_phone" href="#"> +7 (960) 743 33 12 </a></li>
-                                <li><a class="footer_email" href="#"> assetocorsa_car_deal@yandex.ru </a></li>
-                                <li><a class="footer_address" href="#"> ул. Стромынка, 20, Москва, 107996 </a></li>
-                                <li><a class="footer_instagram" href="#"> assetocorsa_car_deal </a></li>
+                                <li><a class="footer_phone" href="#"> + 7(953) 633 12 47 </a></li>
+                                <li><a class="footer_email" href="#"> wrong_gear@tothe.moon</a></li>
+                                <li><a class="footer_address" href="#"> st. Stromynka, 20, Moscow, 107996 </a></li>
+                                <li><a class="footer_instagram" href="#"> wrong_gear_to_the_moon </a></li>
                             </ul>
                         </div>
                         <div class="footer_map">
@@ -126,7 +117,7 @@
             <div class="footer_copy_policy">
                 <div class="container">
                     <div class="copy_text">
-                        2021 Template by AmNI5TIa. Ничего не защищено, это для вуза.
+                        2021 Template by AmNI5TIa. Nothing is protected. This just only for university.
                     </div>
                 </div>
             </div>
