--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,72 +4,65 @@
             <div class="slider_item">
                 <div class="slider_item-content">
                     <div class="slider_title">
-                        Юридическая чистота
+                        Legal purity
                     </div>
                     <div class="slider_text">
-                        Все автомобили с пробегом, представленные в наших салонах, проходят комплексную юридическую
-                        проверку.
+                        All used cars presented in our showrooms undergo a comprehensive legal check.
                     </div>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Просмотреть каталог
+                        Check out!
                     </a>
                 </div>
             </div>
             <div class="slider_item">
                 <div class="slider_item-content">
                     <div class="slider_title">
-                        Тщательная диагностика
+                        Thorough diagnostics
                     </div>
                     <div class="slider_text">
-                        Наши дилерские центры проводят тщательную диагностику всех подержанных авто и гарантируют их
-                        техническая исправность и
-                        надёжность.
+                        Our dealerships carry out a thorough diagnostics of all used cars and guarantee their technical serviceability and reliability.
                     </div>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Просмотреть каталог
+                        Check out!
                     </a>
                 </div>
             </div>
             <div class="slider_item">
                 <div class="slider_item-content">
                     <div class="slider_title">
-                        Сервис
+                        Car Service
                     </div>
                     <div class="slider_text">
-                        Мы осуществляем сервисное и техническое обслуживание ТС. Все работы выполняются
-                        высококвалифицированными мастерами с
-                        многолетним практическим опытом работы.
+                        We carry out service and maintenance of the vehicle. All work is carried out by highly qualified craftsmen with many years of practical experience.
                     </div>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Просмотреть каталог
+                        Check out!
                     </a>
                 </div>
             </div>
             <div class="slider_item">
                 <div class="slider_item-content">
                     <div class="slider_title">
-                        Гарантия
+                        Quality assurance
                     </div>
                     <div class="slider_text">
-                        Мы предоставляем гарантию на автомобили, приобретённые в наших дилерских центрах.
+                        We provide a guarantee for cars purchased from our dealership.
                     </div>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Просмотреть каталог
+                        Check out!
                     </a>
                 </div>
             </div>
             <div class="slider_item">
                 <div class="slider_item-content">
                     <div class="slider_title">
-                        Полный пакет документов.
+                        Full package of documents.
                     </div>
                     <div class="slider_text">
-                        В продаже представлены авто б/у, имеющие все необходимые документы для передачи новому
-                        владельцу и регистрации в
-                        государственных органах.
+                        Used cars are on sale, having all the necessary documents for transferring to a new owner and registering with state bodies.
                     </div>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                        Просмотреть каталог
+                        Check out!
                     </a>
                 </div>
             </div>
@@ -83,23 +76,18 @@
         <div class="services_top">
             <div class="services_title-box">
                 <div class="services_title">
-                    Услуги
+                    Services
                 </div>
                 <div class="services_text">
-                    В автосалонах AssetoCorsa Автомобили с пробегом» на постоянной основе действуют акции и
-                    специальные
-                    финансовые программы,
-                    благодаря которым Вы сможете купить автомобиль б/у в Москве и Московской области по максимально
-                    привлекательной
-                    стоимости. Условия и сроки действия спецпредложений, а также характеристики, комплектации и цены
-                    на авто с пробегом в
-                    наличии просьба уточнять у специалистов отдела продаж по многоканальному телефону или
-                    посредством формы обратной связи.
+                    Here you can sell, buy and participate in an auction for an expensive car. 
+                    Terms and conditions of special offers, as well as characteristics, 
+                    configuration and prices for used cars, please check with the sales department 
+                    specialists by multi-channel phone or through the feedback form.
                 </div>
             </div>
             <div class="services_btn">
                 <a href="#">
-                    Показать все услуги
+                    Show all services
                 </a>
             </div>
         </div>
@@ -107,47 +95,45 @@
             <div class="item">
                 <img src="img/buy_logo.png" class="services_item_img" alt="">
                 <div class="services_item_title">
-                    Купить
+                    Buy
                 </div>
                 <div class="services_item_text">
-                    Двух- или трёхлетний автомобиль с пробегом, имея характеристики новой модели, продаётся на
-                    30–40% дешевле нового.
+                    Choose a car, and we will do the rest yourself.
                 </div>
                 <div class="services_item_btn">
                     <a class="services_item_link" href="#">Подробнее</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                        Каталог
+                        Cars
                     </a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/sell_logo.png" class="services_item_img" alt="">
                 <div class="services_item_title">
-                    Продать
+                    Sell.
                 </div>
                 <div class="services_item_text">
-                    Самостоятельная продажа автомобиля с пробегом отнимет много времени на публикацию и мониторинг
-                    объявлений.
+                    You can also sell your exotic car.
                 </div>
                 <div class="services_item_btn">
                     <a class="services_item_link" href="#">Подробнее</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                        Продать автомобиль
+                        Contact
                     </a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/auction_logo.png" class="services_item_img" alt="">
                 <div class="services_item_title">
-                    Аукцион
+                    Auction
                 </div>
                 <div class="services_item_text">
-                    Аукционы автомобилей с пробегом
+                    We conduct the auctions ourselves, having previously prepared the exotic car for sale.
                 </div>
                 <div class="services_item_btn">
                     <a class="services_item_link" href="#">Подробнее</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                        Аукцион
+                        Auction
                     </a>
                 </div>
             </div>
@@ -159,19 +145,15 @@
     <div class="container">
         <div class="about_inner">
             <div class="about_title">
-                О нас
+                About
             </div>
             <div class="about_text">
-                Официальный дилер AssetoCorsa Автомобили с пробегом» предоставляет возможность купить авто с
-                пробегом в Москве и Московской
-                области на специальных условиях.
-
-                Покупка автомобиля б/у – это отличный вариант вложения денежных средств, если Вы не готовы
-                приобрести новое ТС, не
-                имеете достаточных финансовых ресурсов или предпочитаете менять авто каждые 2–3 года.
+                We are the top-1 in russia for the conclusion of contracts for the purchase of exclusive cars from all over the world.
+                All you have to do is choose a car.
+                The rest of the work is carried out by our specialists, up to a test drive on professional tracks.
             </div>
             <a href="#" class="about_btn default_btn">
-                Узнать больше
+                Learn more
             </a>
         </div>
     </div>
@@ -183,11 +165,10 @@
             <div class="form_content">
                 <div class="form_title_box">
                     <div class="form_title">
-                        Связаться с нами
+                        Contact with us
                     </div>
                     <div class="form_text">
-                        Оставьте заявку и в самое ближайшее время наши специалисты обсудят с вами, интересующий вас
-                        момент.
+                        Leave a request and in the very near future our specialists will discuss with you the moment you are interested in.
                     </div>
                 </div>
                 <div class="form_box">
@@ -199,20 +180,20 @@
                                     <input type="text">
                                 </label>
                                 <label>
-                                    Номер телефона*(не обязательно):
+                                    Phone number * (optional):
                                     <input type="text">
                                 </label>
                                 <label>
-                                    Как к вам обращаться?
+                                    Full name:
                                     <input type="text">
                                 </label>
                                 <label>
-                                    Ваш вопрос:
+                                    Your question:
                                     <select>
-                                        <option>Перезвоните мне</option>
-                                        <option>Направьте подробную информацию мне на почту</option>
-                                        <option>У меня есть претензия</option>
-                                        <option>Другой вопрос</option>
+                                        <option>Call me back</option>
+                                        <option>Send detailed information to me by mail</option>
+                                        <option>I want to sell a very rare car</option>
+                                        <option>Another topic question</option>
                                     </select>
                                 </label>
                             </div>
@@ -223,7 +204,7 @@
                                         </textarea>
                                 </label>
                                 <button class="default_btn" type="submit">
-                                    Получить консультацию
+                                    Go
                                 </button>
                             </div>
                         </div>
