--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -10,7 +10,7 @@
                 <div class="about_text_car">
                     @car.longDescription
                 </div>
-                <a href="#" class="about_btn default_btn">
+                <a href="#" class="about_btn_car default_btn">
                     Get Consultation
                 </a>
             </div>
