--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -590,8 +590,8 @@ header{
 .about_title_car {
     padding: 10px 0px 25px;
     margin-bottom: 20px;
-    font-size: 24px;
-    line-height: 24px;
+    font-size: 30px;
+    line-height: 28px;
     color: #ffffff;
     font-weight: 500;
     font-family: 'Roboto' sans-serif;
@@ -600,8 +600,19 @@ header{
 }
 
 .about_text_car {
+    font-family: 'Roboto' sans-serif;
     margin-bottom: 40px;
-    color: #1b1b1b;
-    -webkit-text-stroke-width: 0.1px;
-    -webkit-text-stroke-color: black;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.07px;
+    color: black;
+    
+    border:solid 2px;
+    border-radius:10px 40px 40px 10px;
+    background-color:#ffffff;
+}
+
+.about_btn_car{
+    background-color:#ffffff;
+    color:black;
 }
