Cars Title style
- Changed cars title style

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -101,8 +101,8 @@
                     Choose a car, and we will do the rest yourself.
                 </div>
                 <div class="services_item_btn">
-                    <a class="services_item_link" href="#">Подробнее</a>
-                    <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
+                    <a class="services_item_link" href="#">Learn More</a>
+                    <a href="/Cars/List" class="default_btn">
                         Cars
                     </a>
                 </div>
@@ -116,7 +116,7 @@
                     You can also sell your exotic car.
                 </div>
                 <div class="services_item_btn">
-                    <a class="services_item_link" href="#">Подробнее</a>
+                    <a class="services_item_link" href="#">Learn More</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
                         Contact
                     </a>
@@ -131,7 +131,7 @@
                     We conduct the auctions ourselves, having previously prepared the exotic car for sale.
                 </div>
                 <div class="services_item_btn">
-                    <a class="services_item_link" href="#">Подробнее</a>
+                    <a class="services_item_link" href="#">Learn More</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
                         Auction
                     </a>
