--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -590,12 +590,10 @@ header{
 .about_title_car {
     padding: 10px 0px 25px;
     margin-bottom: 20px;
-    font-size: 40px;
-    color: #ffffff;
-    font-weight: 500;
-    font-family: 'Roboto' sans-serif;
-    -webkit-text-stroke-width: 0.65px;
-    -webkit-text-stroke-color: black;
+    font-size: 30px;
+    color: #e6e6e6;
+    font-family: Arial Black, Gadget, sans-serif;
+    text-shadow: 0px 0px 0 rgb(0,0,0), 1px 1px 0 rgb(0,0,0), 2px 2px 0 rgb(0,0,0), 3px 3px 0 rgb(0,0,0), 4px 4px 0 rgb(0,0,0), 5px 5px 0 rgb(0,0,0), 6px 6px 0 rgb(0,0,0), 7px 7px 6px rgba(0,0,0,1), 7px 7px 1px rgba(0,0,0,0.5), 0px 0px 6px rgba(0,0,0,.2);
 }
 
 .about_text_car {
