--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -10,6 +10,9 @@
                 <div class="about_text_car">
                     @car.LongDescription
                 </div>
+                <div class="about_text_car">
+                    @car.ShortDescription
+                </div>
                 <a href="#" class="about_btn_car default_btn">
                     Get Consultation
                 </a>
